feat: choose the manga library layout when adding a series
